--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,69 @@
-.App {
-  text-align: center;
+.word {
+    width: 100%;
+    top: 100px;
+    position: fixed;
+    text-align: center;
+    letter-spacing: 5px;
+    font-size: 50px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.usedLetters {
+    width: 100%;
+    top: 200px;
+    position: fixed;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.letter {
+    display: block;
+    margin: 2px;
+    width: 50px;
+    height: 50px;
+    border: 1px solid #a9a9a9;
+    border-radius: 2px;
+    font-size: 40px;
+    text-align: center;
+    color: #7c7c7c;
 }
 
-.App-link {
-  color: #61dafb;
+.errorLetter {
+    width: 100%;
+    top: 350px;
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 26px;
+    color: #a82525;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.errorLetter>.letter {
+    color: #a82525;
+    border: 1px solid #a82525;
+}
+
+.gameLost,
+.remainingErrors {
+    font-size: 26px;
+    color: #a82525;
+}
+
+.gameWon {
+    font-size: 26px;
+    color: #228822;
+}
+
+.resetGameButton {
+    top: 80px;
+    left: 50%;
+    text-align: center;
+    font-size: 26px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
 }
